@@ -4,6 +4,7 @@
  - fix: polygon filters were not stored correctly in log mode
  - fix: several issues related to contour plots, contour spacing,
    and log-scales
+ - fix: subclass MDSubWindow and catch closeEvent (#29)
  - enh+docs: make Young's modulus computation more user convenient and
    update the section in the docs
  - docs: finish first draft of documentation
